[project]
name = "minesweeperai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "keyboard>=0.13.5",
    "mouse>=0.7.1",
    "mss>=10.1.0",
    "opencv-python>=4.12.0.88",
    "pillow>=12.1.0",
    "pyautogui>=0.9.54",
]
